clusters/labinfra/apps/litellm.xuperson.org/litellm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: litellm
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.80.121"
  selector:
    app: litellm
  ports:
  - port: 4000
    targetPort: 4000
    name: http
